extras/cilium/host-firewall.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "demo-host-policy"
spec:
  description: ""
  nodeSelector:
    matchLabels:
      node-access: ssh
  ingress:
  - fromEntities:
    - cluster
  - toPorts:
    - ports:
      - port: "22"
        protocol: TCP
  - icmps:
    - fields:
      - type: EchoRequest
        family: IPv4

# apiVersion: cilium.io/v2
# kind: CiliumClusterwideNetworkPolicy
# metadata:
#   name: host-firewall-ssh-and-api
# spec:
#   endpointSelector:
#     matchLabels:
#       node.kubernetes.io/instance-type: k3s  
#   ingressDeny:                          
#   - {}                                 
#   ingressAllow:                         
#   - toPorts:
#     - ports:
#       - port: "22"
#         protocol: TCP
#       - port: "6443"
#         protocol: TCP
